--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
     "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "native-base": "^3.4.15",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.19.1",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
