--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
     "mobx": "^6.6.2",
+    "mobx-persist-store": "^1.1.2",
     "mobx-react": "^7.5.3",
     "native-base": "^3.4.15",
     "react": "18.1.0",
