--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "useDefineForClassFields": true,
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
     /* Completeness */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
   }
 }
